cmake_minimum_required(VERSION 3.17)
project(untitled2)

set(CMAKE_CXX_STANDARD 17)
include_directories("${PROJECT_SOURCE_DIR}/include" "${PROJECT_SOURCE_DIR}/tests/include")
include_directories("/usr/local/Cellar/libpng/1.6.37/include")
set(HEADERS /usr/local/Cellar/libpng/1.6.37/include/png.h)
add_executable(untitled2 main.cpp include/olcPixelGameEngine.h ${HEADERS})
include_directories (/System/Library/Frameworks)
find_library(OpenGL_LIBRARY OpenGL)
find_library(GLUT_LIBRARY GLUT)
set(EXTRA_LIBS ${OpenGL_LIBRARY} ${GLUT_LIBRARY})
target_link_libraries(untitled2 /usr/local/Cellar/libpng/1.6.37/lib/libpng.dylib ${EXTRA_LIBS})